--- a/package.json
+++ b/package.json
@@ -15,5 +15,11 @@
   "bugs": {
     "url": "https://github.com/BrookeHeck/city-explorer-api/issues"
   },
-  "homepage": "https://github.com/BrookeHeck/city-explorer-api#readme"
+  "homepage": "https://github.com/BrookeHeck/city-explorer-api#readme",
+  "dependencies": {
+    "cors": "^2.8.5",
+    "dotenv": "^16.0.1",
+    "express": "^4.18.1",
+    "nodemon": "^2.0.19"
+  }
 }
